# iloader

./: .gitignore  README.md  count_downloads.ts  crowdin.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: download-count.yml
src/: AppleID.css  AppleID.tsx  Device.tsx  ErrorContext.tsx  errors.tsx  i18next.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  device.rs  error.rs  lib.rs  logging.rs  pairing.rs  sideload.rs
src/locales/: am.json  ar.json  cs.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ja.json  ko.json  pl.json  ru.json  sv.json  tr.json  vi.json  zh_cn.json  zh_hk.json  zh_tw.json
src/pages/: Certificates.css  Pairing.tsx  Settings.tsx
